--- a/whatsapp-web/src/app/auth/signup/signup.component.html
+++ b/whatsapp-web/src/app/auth/signup/signup.component.html
@@ -1,4 +1,3 @@
-<!-- filepath: /whatsapp-web/src/app/components/signup/signup.component.html -->
 <div class="signup-container">
 	<app-quote />
 	<div class="signup-card">
@@ -108,6 +107,12 @@
 				</ul>
 			</div>
 			}
+			<div class="login-link">
+				Already have an account?
+				<a href="javascript:void(0)" (click)="navigateToLogin()"
+					>Log in</a
+				>
+			</div>
 		</form>
 	</div>
 </div>
