--- a/whatsapp-web/src/app/quote/quote.component.html
+++ b/whatsapp-web/src/app/quote/quote.component.html
@@ -1,6 +1,13 @@
 @if (quote) {
 <div class="quote-container">
-	<p class="quote">{{ quote.text }}</p>
-	<p class="author">- {{ quote.author }}</p>
+	<div
+		class="quote-wrapper"
+		[class.fade-in]="fadeState === 'in'"
+		[class.fade-out]="fadeState === 'out'"
+	>
+		<div class="quote-mark">"</div>
+		<div class="quote-text">{{ quote.text }}</div>
+		<div class="quote-author">— {{ quote.author }}</div>
+	</div>
 </div>
 }
