--- a/whatsapp-web/src/app/chat/chat-main/chat-main.component.html
+++ b/whatsapp-web/src/app/chat/chat-main/chat-main.component.html
@@ -36,11 +36,7 @@
 				</svg>
 			</button>
 		</div>
-		<app-conversation-list
-			[conversations]="conversations()"
-			(conversationSelected)="onConversationSelected($event)"
-			[selectedConversationId]="selectedConversationId$ | async"
-		/>
+		<app-conversation-list [conversations]="conversations()" />
 		@if (error()) {
 			<p class="error-message">{{ error() }}</p>
 		}
